<resources>
    <string name="app_name" translatable="false">Provider App</string>

    <string name="login_title">Login</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="login_btn">Login</string>
    <string name="forget_password_">Forgot password ?</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account ? Create one</string>

    <string name="phone_email">PHONE/EMAIL</string>
    <string name="password_">PASSWORD</string>
    <string name="sign_up_bar">Sign Up</string>
    <string name="name">NAME</string>
    <string name="email_">E-MAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="city_">CITY</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="sign_up_text">Sign up</string>
    <string name="already_member">Already member ?</string>
    <string name="get_your_advert_here" translatable="false">Get Your\n Advert\n Here!</string>


    <string name="user_name_header" translatable="false">Shahzeb</string>
    <string name="emal_id_header" translatable="false">Shahzeb@gmail.com</string>

    <string name="home">Home</string>
    <string name="drawer_address">Address</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="contact_support">Contact Support</string>
    <string name="payout">Payout</string>
    <string name="bio">Bio</string>
    <string name="shop">Shop</string>


    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>


    <string-array name="country_arrays">
        <item>Select a state</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    //

    <string name="DUSTING_AND_POLISHING">\"DUSTING AND POLISHING\"</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>

    <string name="refer_now_amp"><![CDATA[Refer now & earn up to $ 50.00]]></string>
    <string name="save_and_continue">Save &amp;amp Continue</string>
    <string name="company_info">Company info</string>
    <string name="offered_services">Offered services</string>
    <string name="faq">FAQ</string>
    <string name="rules_and_regulations">Rules and Regulations</string>
    <string name="open_oppurtunities">Open Oppurtunities</string>
    <string name="completed_appointments">Completed Appointments</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="canceled_appointments">Canceled Appointments</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="save">SAVE</string>
    <string name="send_a_referal_link_to_your_friend_via_sms_email_whatsapp">Send a referal link to your friend via SMS/ Email/ Whatsapp</string>
    <string name="referral_code">REFERRAL CODE</string>
    <string name="refer_now">Refer Now</string>
    <string name="working_hours">WORKING HOURS:-</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="pick_start_time">Pick start time</string>
    <string name="pick_end_time">Pick end time</string>
    <string name="add_your_bio">ADD YOUR BIO:-</string>
    <string name="write_your_bio_here">Write your bio here..</string>
    <string name="service_types">SERVICE TYPES:-</string>
    <string name="logging_out">Logging out</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout</string>
    <string name="no" translatable="false">No</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="this_is_the_default_text">This is the default text</string>
    <string name="ok">OK</string>
    <string name="success">SUCCESS</string>
    <string name="stay_here">Stay here</string>
    <string name="login_again">Login again</string>
    <string name="update">Update</string>
    <string name="rules_and_regulation">RULES AND REGULATION</string>
    <string name="i_agree_to_all">I agree to all.</string>
    <string name="terms_and_conditions_and_special_terms">Terms and Conditions and Special terms.</string>
    <string name="data_combination_policy_i_wish_to_receive_all_cutomized_services">Data combination policy, i wish to receive all cutomized services</string>
    <string name="phone_number_verification_this_will_always_result_in_data">Phone number verification, this will always result in data</string>
    <string name="decline">Decline</string>
    <string name="agree">Agree</string>
    <string name="logout">Logout</string>


</resources>
