<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">
    <LinearLayout
        android:id="@+id/tvWorkingHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            android:textColor="#000"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_95sdp"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>


    <RelativeLayout

        android:id="@+id/linearStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWorkingHours"
        android:layout_marginLeft="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvSetStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/start_time"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tvClickStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/pick_your_time_bg"
            android:padding="@dimen/_5sdp"
            android:text="@string/pick_start_time"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/linearEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearStartTime"
        android:layout_marginLeft="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvSetEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/end_time"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tvClickEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:background="@drawable/pick_your_time_bg"
            android:padding="@dimen/_5sdp"
            android:text="@string/pick_end_time"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/tvadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEndTime"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_bio"
            android:textColor="#000"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_80sdp"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/re"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/tvadd"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/spinner_bg">

        <EditText
            android:id="@+id/edBio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@null"
            android:backgroundTint="#FFF"
            android:gravity="left"
            android:hint="@string/write_your_bio_here"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:singleLine="false"
            android:textColorHint="#000"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeServiceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp">


        <TextView
            android:id="@+id/tvServiceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_types"
            android:textColor="#000"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_toLeftOf="@+id/rightarrow"
            android:id="@+id/multiselectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServiceType"
            android:padding="@dimen/_5sdp"
            android:text=""
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/rightarrow"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/arrow_right"
            android:layout_alignParentEnd="true"
            android:rotation="90"
            android:tint="@color/relativeBottomColor"
            android:layout_below="@+id/tvServiceType"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/multiselectSpinner"
            android:background="#000" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re"
        android:layout_centerVertical="true"
        android:layout_marginTop="14dp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvAddBtn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/add_bio_btn_bg"
            android:gravity="center"
            android:text="Update"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvEditBtn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/add_bio_btn_bg"
            android:gravity="center"
            android:text="UPDATE"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/add_bio_btn_bg"
            android:gravity="center"
            android:text="EDIT"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:visibility="gone" />


    </RelativeLayout>


</RelativeLayout>