<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background">

        <RelativeLayout
            android:id="@+id/relativeBackArrowImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3374de"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/backArrowImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/back_arrow"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up_bar"
                android:textColor="#000"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeBackArrowImage"
            android:padding="@dimen/_10sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_bar"
                android:textColor="#FF4D6744"
                android:textSize="@dimen/_20ssp"
                android:visibility="visible" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLogin"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_13sdp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="@dimen/_13sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/_13sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="@dimen/_13sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilFive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/StyledTilEditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="@dimen/_13sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select states "
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <Spinner
                        android:id="@+id/spinnerState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select cities "
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <Spinner
                        android:id="@+id/spinnerCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select zipcodes "
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <Spinner
                        android:id="@+id/spinnerZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilThree"
                        android:layout_width="@dimen/_125sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:theme="@style/StyledTilEditTextTheme">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city_"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textSize="@dimen/_13sdp"
                            app:backgroundTint="#000" />
                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <Spinner
                            android:id="@+id/spinnerStates"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#000" />

                    </LinearLayout>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:theme="@style/StyledTilEditTextTheme"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zip_code"
                        android:imeOptions="actionSend"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="@dimen/_13sdp"
                        app:backgroundTint="#000" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Select the services from the dropdown:-"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <!--android:background="@drawable/spinner_bg"-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Spinner
                        android:id="@+id/spinnerServices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeEd"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:id="@+id/SignUpBtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/login_background"
                    android:text="@string/sign_up_text"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAlreadyMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/already_member"
                    android:textColor="#FF4D6744"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>